# cisraeliqueue

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.rst  changelog.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
israeliqueue/: __init__.pyi  __init__.pyx
src/: lib.rs
src/israeliqueue/: __init__.c  __init__.html  __init__.pyi  __init__.pyx
tests/: test_israeliqueue.py
